# GenBit

./: README.md  __pyproject.toml  pyproject.toml  requirements.txt  setup.py
src/genbit/: genbit.py
